--- a/Login.html
+++ b/Login.html
@@ -1,5 +1,93 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Bootstrap Case</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="bootstrap-3.3.5-dist/css/bootstrap.min.css">
+  <linK rel="stylesheet" href="bootstrap-3.3.5-dist/css/Custom.css"> 
+
+  
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
+  
+</script> 
+<script src="bootstrap-3.3.5-dist/js/bootstrap.min.js">
+</script> 
+</head>
+<body padding-top: 70px> 
+    <div class="navbar  custom-navbar " role="navigation">   
+    <div class ="container">     
+    <div class="navbar-header">     
+    <button type = "button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class = "icon-bar"></span>
+        <span class = "icon-bar"></span>
+        <span class = "icon-bar"></span>
+    </button>
+    <h class ="navbar-brand custom-navbar" >redbus Promotion CMS</a>
+      </div>
+     <div>
+        <ul class="nav navbar-nav custom-navbar navbar-right">
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#">Add Banner</a></li>
+          <li><a href="#">Add Offer</a></li>
+          <li><a href="#">Page 3</a></li>
+        </ul> 
+    </div>
+    </div>
+    </div>
 
 
- <a class="navbar-brand" href="#">redBus</a>
+<div class="container">
+  <h2>Offer validity</h2> 	
+    <form role="form">
+      <div class="form-group">
+        <label for="Offer Valid from">Offer Valid form:</label>
+          <div class="row">
+            <div class='col-xs-6  col-xs-4'>
+              <div class="form-group">
+                <div class='input-group date' id='datetimepicker1'>
+                  <input type='text' class="form-control" />
+                    <span class="input-group-addon">
+                      <span class="glyphicon glyphicon-calendar"></span>
+                    </span>
+
+                </div>
+              </div>
+            </div>
+         
+ <script type="text/javascript">
+  $(function () {
+  $('#datetimepicker1').datepicker();
+            });
+ </script>
+	</div>
+                <!--  <input type="email" class="form-control" id="email" placeholder="Enter email">-->
+      </div>
+
+<div class="form-group">
+ <label for="Offer Valid Till">Offer Valid Till:</label>
+  <div class="row">
+   <div class='col-xs-6 col-xs-4'>
+     <div class="form-group">
+      <div class='input-group date' id='datetimepicker1'>
+       <input type='text' class="form-control" />
+        <span class="input-group-addon">
+         <span class="glyphicon glyphicon-calendar"></span>
+         </span>
+       </div>
+      </div>
+     </div>
+<script type="text/javascript">
+  $(function () {
+   $('#datetimepicker1').datepicker();
+     });
+</script>
+  </div>
+               <!--   <input type="password" class="form-control" id="pwd" placeholder="Enter password">-->
+</div>
+  </form>
+</div>
+</div>
+</body>
 </html>
