--- a/Login.html
+++ b/Login.html
@@ -8,11 +8,10 @@
   <linK rel="stylesheet" href="bootstrap-3.3.5-dist/css/Custom.css"> 
 
   
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
-  
-</script> 
-<script src="bootstrap-3.3.5-dist/js/bootstrap.min.js">
-</script> 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> 
+  <script src="bootstrap-3.3.5-dist/js/bootstrap.min.js"></script> 
+  <script src="bootstrap-3.3.5-dist/js/bootstrap-datepicker.js"></script>
+
 </head>
 <body padding-top: 70px> 
     <div class="navbar  custom-navbar " role="navigation">   
