--- a/index.html
+++ b/index.html
@@ -1,57 +1,54 @@
-<html>
-  <head>
-    <title>Bootstrap 101 Template</title>
-     <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="bootstrap-3.3.5-dist/css/bootstrap.min.css">
-        <linK rel="stylesheet" href="bootstrap-3.3.5-dist/css/Custom.css"> 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
-        </script> 
-        <script src="bootstrap-3.3.5-dist/js/bootstrap.min.js">
-        </script> 
-  </head>
-  
-  <body>
-    <div class="navbar-wrapper custom-navbar" role="navigation">
-    <div class="container">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">redBus Promotion CMS</a>
-          </div>
-          <div>
-            <ul class="nav navbar-nav custom-navbar navbar-right">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a href="#">Add Banner</a></li>
-              <li><a href="#">Add Offer</a></li>
-              <li><a href="#">Page 3</a></li>
-            </ul>   
-          </div>
-        </div>   
-      </div> 
+<!DOCTYPE html>
+<html lang="en">
 
-<div class="container">
-    <div class="row">
-        <div class='col-sm-6'>
-            <div class="form-group">
-                <div class='input-group date' id='datetimepicker1'>
-                    <input type='text' class="form-control" />
-                    <span class="input-group-addon">
-                        <span class="glyphicon glyphicon-calendar"></span>
-                    </span>
-                </div>
-            </div>
-        </div>
-        <script type="text/javascript">
-            $(function () {
-                $('#datetimepicker1').datepicker();
-            });
-        </script>
+<head>
+    <meta charset="UTF-8">
+    <title>My First</title>
+    <!-- CSS -->
+    <!-- load bootstrap and our stylesheet -->
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <style>
+    body {
+        padding-top: 50px;
+    }
+    </style>
+    <!-- JS -->
+    <!-- load angular and our custom application -->
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular.min.js"></script>
+    <script src="js/app.js"></script>
+</head>
+
+<body class="container" ng-app="offersDB" ng-controller="mainController as main">
+    <!-- form to update the message variable using ng-model -->
+    <div class="form-group">
+        <label>Message</label>
+        <input type="text" class="form-control" ng-model="main.message">
     </div>
-</div>
-  </body>
+    <h2>This is my message:</h2> {{ main. message }}
+    <h2>This is my list:</h2>
+    <table class="table table-bordered">
+        <thead>
+            <tr>
+                <td>Name</td>
+                <td>Color</td>
+                <td>Nerd Level</td>
+            </tr>
+        </thead>
+        <tbody>
+            <tr ng-repeat="computer in main.computers">
+                <td>{{ computer.name }}</td>
+                <td>{{ computer.color }}</td>
+                <td>{{ computer.nerdness }}</td>
+            </tr>
+        </tbody>
+    </table>
+    <!-- form to add computer to the list -->
+    <form class="form-inline" ng-submit="main.addComputer()">
+        <input type="text" class="form-control" placeholder="Macbook" ng-model="main.computerData.name">
+        <input type="text" class="form-control" placeholder="Silver" ng-model="main.computerData.color">
+        <input type="number" class="form-control" placeholder="8" ng-model="main.computerData.nerdness">
+        <button type="submit" class="btn btn-success">Add</button>
+    </form>
+</body>
+
 </html>
